--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="UTF-8">
-  <title>Image classification using MobileNet and p5.js</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
-  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+	<title>Smart Fridge 2: Electric Boogaloo</title>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+	        <link href="style.css" rel="stylesheet" type="text/css" />
+
+	<script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
+	<script src="sketch.js"></script>
 </head>
 
 <body>
-  <h1>Image classification using MobileNet and p5.js</h1>
-  <script src="sketch.js"></script>
+	<!--<h1>YOLO image detection on single image</h1>-->
+	<h1>Enter in a link to an image (Not all image links work)</h1>
+	<div>
+	<!--<input type="text" id="link" name="link" required minlength="4" maxlength="500" size="100" class="centeredinput"><br><br>-->
+	<button type="button" class="buttonthing">Tell me what I want.</button>
+	</div>
 </body>
 
 </html>
