--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<!--<h1>YOLO image detection on single image</h1>-->
-	<h1>Enter in a link to an image (Not all image links work)</h1>
+	<h1 class="firstText">Enter in a link to an image (Not all image links work)</h1>
 	<div>
 	<!--<input type="text" id="link" name="link" required minlength="4" maxlength="500" size="100" class="centeredinput"><br><br>-->
 	<button type="button" class="buttonthing">Tell me what I want.</button>
