--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<div>
 	<!--<input type="text" id="link" name="link" required minlength="4" maxlength="500" size="100" class="centeredinput"><br><br>-->
 	<button type="button" class="buttonthing">Tell me what I want.</button>
+	<h2 class='done'>Done. ↓</h2>
 	</div>
 </body>
 
